tests/literal/literal.exp
Error: enum_client.js:6
  6: foo("LOCATION"); // error
         ^^^^^^^^^^ property `LOCATION`. Property not found in
  4: function foo(x: $Keys<typeof APIKeys>) { }
                     ^^^^^^^^^^^^^^^^^^^^^ object literal

Error: enum_client.js:10
 10: bar(APIKeys.NAME); // error: since "NAME" is not in the smaller enum
         ^^^^^^^^^^^^ property `name`. Property not found in
  8: function bar(x: $Keys<{age: number}>) { }
                     ^^^^^^^^^^^^^^^^^^^^ object type

Error: enum_client.js:17
 17: var name:number = object[APIKeys.NAME]; // error: object.name is a string
                       ^^^^^^^^^^^^^^^^^^^^ Cannot assign `object[APIKeys.NAME]` to `name` because string [1] is incompatible with number [2].
  References:
   14: object[APIKeys.NAME] = "FOO"; // i.e., object.name = "FOO"
                              ^^^^^ [1]: string
   17: var name:number = object[APIKeys.NAME]; // error: object.name is a string
                ^^^^^^ [2]: number

Error: enum_client.js:21
 21: var red:string = tuple[indices.red]; // error: tuple[0] is a number
                      ^^^^^^^^^^^^^^^^^^ Cannot assign `tuple[indices.red]` to `red` because number [1] is incompatible with string [2].
  References:
   20: var tuple = [42, "hello", false];
                    ^^ [1]: number
   21: var red:string = tuple[indices.red]; // error: tuple[0] is a number
               ^^^^^^ [2]: string

Error: number.js:6
  6:   return -x;
              ^^ x. Expected number instead of
  6:   return -x;
               ^ string


Found 5 errors
